network_policies/foo-allow-to-hello.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: foo-allow-to-hello
spec: 
  policyTypes:
  - Egress:
  podSelector:
    matchLabels:
      app: foo       # this policy will be attached to pods with label app: foo
  egress:
  - to:
    - podSelector:
        matchLabels: 
          app: hello     #you will only be able to send the request to pods with labels app:hello
  - ports: 
    - port: 53           #from these ports only communication will happen
      protocol: TCP
    - port: 53
      protocol: UDP
