network_policies/hello-allow-from-foo.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: 
  name: hello-allow-from-foo
spec:
  policyTypes:
  - Ingress
  podSelector:       
    matchLabels: 
      app:hello         #this policy will be attached to pods with this label.
  ingress: 
  - from: 
    - podSelector:
        matchLabels:
          app: foo    # the pods with label will be allowed to talk to the pods selected under this networkpolicy.
